p-fb-service-ConfigMAP.yml
apiVersion: v1
kind: Service
metadata:
  name: pesbuk-service
  labels:
    run: pesbuk-service
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
  selector:
    run: pesbuk
