p-ingress-service.yml
apiVersion: v1
kind: Service
metadata:
  name: pesbuk-service
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
  selector:
    run: pesbuk-deployment
